Fix footer bottom white-space on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2778,6 +2778,7 @@ body.suki-page-layout-boxed #page {
 @media screen and (max-width: 1023px) {
 	.suki-footer-bottom-bar-row {
 		display: block;
+		white-space: normal;
 	}
 }
 
