--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -92,6 +92,7 @@
 
 	@media screen and ( max-width: $breakpoint_1024 - 1px ) {
 		display: block;
+		white-space: normal;
 	}
 }
 
